--- a/ide/index.html
+++ b/ide/index.html
@@ -1,7 +1,13 @@
 <html>
-  <head>
-      <script type='text/javascript' src='../_build/default/ide/ide.bc.js'></script>
-  </head>
-  <body>
-  </body>
+    <head>
+        <script type='text/javascript' src='../_build/default/ide/ide.bc.js'></script>
+        <style>
+         .container {
+             width: 100%;
+             height: 100%;
+         }
+        </style>
+    </head>
+    <body>
+    </body>
 </html>
