ide: monaco & tokenizer

--- a/ide3/index.html
+++ b/ide3/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>Orc IDE</title>
-    </head>
-    <body>
-        <div id="editor"></div>
 
-        <!-- Main -->
-        <script src="/js/main.bc.js"></script>
-        <script src="/bundle.js"></script>
-    </body>
+<head>
+    <meta charset="UTF-8" />
+    <title>Orc IDE</title>
+</head>
+
+<body>
+    <div id="editor"></div>
+
+    <!-- Main -->
+    <script src="/js/main.bc.js"></script>
+    <script src="/app.bundle.js"></script>
+</body>
+
 </html>
